starting on about.html

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,4 +4,5 @@
 //components//
 @import "../styles/components/images";
 @import "../styles/components/animation";
-@import "../styles/components/home"
+@import "../styles/components/buttons";
+@import "../styles/components/body";
