--- a/styles/components/_animation.scss
+++ b/styles/components/_animation.scss
@@ -1,30 +1,29 @@
-@keyframes hover {
+@keyframes floating {
 	0% {
-		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
 		transform: translateY(0px) translateX(0vh)
 	}
-
-	25% {
-		box-shadow: 5 10px 15px 5px rgba(0,0,0,0.2);
-		transform: translateY(-.4vh) translateX()
-	}
-
 	50% {
-		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-		transform: translateY(2px) translateX(0vh)
+		box-shadow: 0 12px 15px 0px rgba(0,0,0,0.4);
+		transform: translateY(-8px) translateX(0vh)
 	}
-
-    75% {
-		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-		transform: translateY(.4vh) translateX(0vh)
-	}
-
     100% {
-		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
 		transform: translateY(0px) translateX(0vh)
 	}
 }
+	@keyframes moving-bg {
+		0%{
+			background-position:19% 0%
+		}
+		50%{
+			background-position:62% 100%
+		}
+		100%{
+			background-position:19% 0%
+		}
+	}
 
 
 
-}
+
