--- a/styles/components/_images.scss
+++ b/styles/components/_images.scss
@@ -2,9 +2,20 @@
     width:250px;
     height:250px;
     border-radius: 50%;
-    animation: hover 5s ease-in-out infinite;
     display: block; 
     align-items: center;
     margin-top: 25vh;
+    border: 2px solid #232b2b;
+    animation-fill-mode: forwards;
+    transition: transform 3s;
+    animation: floating 3.3s ease-in-out infinite;
 
-}http://127.0.0.1:3000/assets/profilepic.jpg
+}
+#profile-pic-container{
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    display: flex;
+}
+
+
