--- a/styles/main.css
+++ b/styles/main.css
@@ -3,70 +3,76 @@
   padding: 0;
   border: 0;
   box-sizing: border-box;
+  color: #232b2b;
 }
 
 #profilepic {
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  animation: hover 5s ease-in-out infinite;
   display: block;
   align-items: center;
   margin-top: 25vh;
+  border: 2px solid #232b2b;
+  animation-fill-mode: forwards;
+  transition: transform 3s;
+  animation: floating 3.3s ease-in-out infinite;
 }
 
-@keyframes hover {
-  0% {
-    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-    transform: translateY(0px) translateX(0vh);
-  }
-  25% {
-    box-shadow: 5 10px 15px 5px rgba(0, 0, 0, 0.2);
-    transform: translateY(-0.4vh) translateX();
-  }
-  50% {
-    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-    transform: translateY(2px) translateX(0vh);
-  }
-  75% {
-    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-    transform: translateY(0.4vh) translateX(0vh);
-  }
-  100% {
-    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-    transform: translateY(0px) translateX(0vh);
-  }
-}
-@keyframes gradient {
-  0% {
-    background-image: linear-gradient(90deg, rgb(56, 63, 117) 0%, rgba(255, 125, 58, 0) 55%, rgb(238, 46, 33) 100%);
-  }
-  50% {
-    background-image: linear-gradient(90deg, rgb(56, 63, 117) 0%, rgba(255, 125, 58, 0.668504902) 55%, rgb(238, 46, 33) 100%);
-  }
-  100% {
-    background-image: linear-gradient(90deg, rgb(56, 63, 117) 0%, rgba(255, 125, 58, 0) 55%, rgb(238, 46, 33) 100%);
-  }
-}
-#home-border {
-  width: 7;
+#profile-pic-container {
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  display: flex;
 }
 
+@keyframes floating {
+  0% {
+    box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+    transform: translateY(0px) translateX(0vh);
+  }
+  50% {
+    box-shadow: 0 12px 15px 0px rgba(0, 0, 0, 0.4);
+    transform: translateY(-8px) translateX(0vh);
+  }
+  100% {
+    box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+    transform: translateY(0px) translateX(0vh);
+  }
+}
+@keyframes moving-bg {
+  0% {
+    background-position: 19% 0%;
+  }
+  50% {
+    background-position: 62% 100%;
+  }
+  100% {
+    background-position: 19% 0%;
+  }
+}
 .button {
   display: inline-flex;
   font-size: 36px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   text-align: center;
   text-decoration: none;
-  color: black;
-  border-left: 3px solid black;
-  border-bottom: 3px solid black;
-  width: 150px;
+  width: 200px;
   height: 50px;
+  border-left: 3.2px solid black;
+  border-bottom: 3.2px solid black;
   position: relative;
   margin: 0 50px 50px 0;
   justify-content: center;
-  animation: hover 3s ease-in-out infinite;
-  background-color: white;
+  background-color: transparent;
+  transition-duration: 3s;
+  align-items: center;
+}
+
+.button:hover {
+  transform: scale(1.2);
+  transform-style: preserve-3d;
 }
 
 #button-container {
@@ -78,9 +84,9 @@
   text-align: center;
 }
 
-#profile-pic-container {
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  display: flex;
+body {
+  background: linear-gradient(335deg, #ce9c97, #f6e9d2, #e8decc);
+  background-size: 400%;
+  animation: moving-bg 20s ease infinite;
+  height: 100vh;
 }/*# sourceMappingURL=main.css.map */
